adding posts and configuring config toml

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>dataterminal</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Spicy content om radiolära, cyber och SIGINT. Så spicy det kan bli med vågutbredning, modulering och signaldisciplin. Vi tittar på aktuella hotaktörer, attackvektorer och elektronisk krigföring. Var en tillgång - tråkigt vinner." />
+    <meta name="description" content="Du är Sveriges Defensiva Infrastruktur! Lär dig radio, cyber och SIGINT; vågutbredning, modulering och signaldisciplin. Vi tittar på aktuella hotaktörer, attackvektorer och elektronisk krigföring. Datarapporteringsterminal finns även på Instagram. Var en tillgång - tråkigt vinner." />
 
     
     
