--- a/public/404.html
+++ b/public/404.html
@@ -1,1 +1,24 @@
-<h3>404 - Not Found</h3>
+!DOCTYPE html>
+<html>
+<head>
+    <style type=text/css>
+
+    p {    color: blue;    
+    font-weight: 900;    
+    font-size: 20px;    
+    font-family: Helvetica, Arial, sans-serif;    
+    }
+
+    </style>
+</head>
+
+<body>
+    <h1>404 - sidan existerar inte</h1>
+    <br><br>    
+    <p>
+            Klicka bakåt eller besök <a href="dataterminal.net">startsidan</a>
+
+    </p>
+
+</body>
+</html>
