changes to posts, removing cloudflare analytics token

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <title>dataterminal</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Radiolära, cyber och SIGINT. Vad är frekvens och våglängd? Hur funkar modulering? Vi tittar på aktuella hotaktörer, attackvektorer och elektronisk krigföring. Var en tillgång - tråkigt vinner." />
-    <meta name="keywords" content="radio, cyber, defensiv infrastruktur, radiolära">
+    <meta name="description" content="Radiolära & Cyber. Vad är frekvens och våglängd? Hur funkar modulering? Vi tittar på aktuella hotaktörer, attackvektorer och elektronisk krigföring. Var en tillgång - tråkigt vinner." />
+    <meta name="keywords" content="radio, cyber, defensiv infrastruktur, radiolära, cybersäkerhet">
 
     <link rel="icon" href="./images/favicon.ico">
 
@@ -267,12 +267,12 @@
         and <a href="https://github.com/austingebauer/devise" target="_blank">Devise</a>
     </small>
 
-</footer>
-
     <script defer 
         src='https://static.cloudflareinsights.com/beacon.min.js' 
         data-cf-beacon='{"token": "07d66e124f484beb9dddbb14d4780b0a"}'>
     </script>
+
+</footer>
     
     
     </body>
